--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <a 
-            href="itms-services://?action=download-manifest&url=https://github.com/wikijone/ios-pekall-mdm/blob/master/2083.plist">
+            href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/2083.plist">
             京联云IOS设备管控客户端</a>
     </body>
 </html>
