更新页面及应用版本

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>京联云IOS设备管控客户端</title>
 </head>
-<body bgcolor="#73ffdb">
+<body bgcolor="#40e0d0">
 <div align="center">
-    <img src="icon.57x57.png"/>
+    <div>京联云iOS企业设备管理客户端</div>
     <div>
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/2083.plist">京联云iOS企业管理客户端</a>
+        <img src="1@2x.png"/>
+        <img src="2@2x.png"/>
+        <img src="3@2x.png"/>
+        <img src="4@2x.png"/>
     </div>
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/2083.plist">
+        <img src="icon.57x57.png"/>
+        <div>点击安装</div>
+    </a>
 </div>
 </body>
 </html>
