--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>京联云IOS设备管控客户端</title>
     <link rel="stylesheet" href="css/example.css">
     <style>
-        .banner-index {
-            width: 960px;
-            height: 540px;
-        }
+        /*.banner-index {*/
+        /*    width: 960px;*/
+        /*    height: 540px;*/
+        /*}*/
 
         .release-ver {
             color: darkblue;
