--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                     3.3.39-2084
                 </a>
             </li>
+            <li>
+                <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/2085.plist">
+                    3.3.40-2085
+                </a>
+            </li>
         </ol>
     </div>
 </div>
